# VirtualLabs_SpecificHeat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/include/: Beaker.hpp  Calorimeter.hpp  HeatSource.hpp  Metal.hpp  Substance.hpp
app/include/Container/: Container.hpp
app/include/Substance/: Liquid.hpp  Metal.hpp  Substance.hpp
app/src/: Beaker.hpp  Calorimeter.hpp  Container.cpp  Container.hpp  HeatPlate.hpp  HeatSource.cpp  Liquid.cpp  Liquid.hpp  Metal.cpp  Metal.hpp  Room.cpp  Room.hpp  Substance.cpp  Substance.hpp  main.cpp  oop_test.cpp
app/src/Container/: Container.cpp
app/src/Substance/: Liquid.cpp  Metal.cpp  Substance.cpp
app/test/: __test_container.cpp
include/: Beaker.hpp  Calorimeter.hpp  Container.hpp  Entity.hpp  EntityManager.hpp  HeatPlate.hpp  HotPlate.hpp  IComponent.hpp  Laboratory.hpp  Liquid.hpp  Metal.hpp  Renderable.hpp  RenderableComponent.hpp  Renderer.hpp  Scale.hpp  Sprite2DComponent.hpp  Substance.hpp  TemperatureManager.hpp  Thermometer.hpp
include/VirtualLabs/Components/: Sprite2DComponent.hpp
include/VirtualLabs/Components/Physics/Container/: Calorimeter.hpp
include/VirtualLabs/Entities/: Entity.hpp  RenderComponent.hpp
include/VirtualLabs/Event/: Button.hpp  Clickable.hpp  MouseClickManager.hpp
include/VirtualLabs/Physics/: PhysicsManager.hpp
include/VirtualLabs/Physics/Container/: Beaker.hpp  Calorimeter.hpp  Container.hpp
include/VirtualLabs/Physics/Core/: Laboratory.hpp  Scale.hpp
include/VirtualLabs/Physics/Substance/: Liquid.hpp  Metal.hpp  Substance.hpp
include/VirtualLabs/Render/: Renderable.hpp  Renderer.hpp
include/VirtualLabs/UI/: Renderable.hpp
include/x/: Clickable.hpp  Entity.hpp  EntityManager.hpp  IComponent.hpp  PhysicsManager.hpp
src/: Beaker.cpp  Calorimeter.cpp  Container.cpp  Entity.cpp  HotPlate.cpp  IComponent.cpp  Laboratory.cpp  Liquid.cpp  Metal.cpp  Renderable.cpp  RenderableComponent.cpp  Renderer.cpp  Scale.cpp  Sprite2DComponent.cpp  Substance.cpp  TemperatureManager.cpp  Thermometer.cpp  __experiment_unguided.cpp  __main.cpp
src/VirtualLabs/: Entity.cpp  IComponent.cpp
src/VirtualLabs/Components/: IComponent.cpp
src/VirtualLabs/Components/Physics/Substance/: Liquid.cpp
src/VirtualLabs/Entities/: Entity.cpp  EntityManager.cpp  RenderComponent.cpp  Sprite2DComponent.cpp
src/VirtualLabs/Event/: Button.cpp
src/VirtualLabs/Physics/: PhysicsManager.cpp
src/VirtualLabs/Physics/Container/: Container.cpp
src/VirtualLabs/Physics/Core/: HeatPlate.cpp  Laboratory.cpp  Scale.cpp
src/VirtualLabs/Physics/Substance/: Liquid.cpp  Metal.cpp  Substance.cpp
src/VirtualLabs/Render/: Renderable.cpp  Renderer.cpp
src/VirtualLabs/UI/: Renderable.cpp  Renderer.cpp
src/x/: IComponent.cpp  PhysicsManager.cpp
test/: __experiment_guided.cpp  __main.cpp  __main.h  __test_container.cpp  __test_engine.cpp  __test_entity.cpp  __test_renderable.cpp  __test_sprites.cpp  __test_template.cpp
test/x/: __test_container.cpp  __test_renderable.cpp  __test_substance.cpp
